@@ -5,6 +5,8 @@ devscripts (2.10.74) UNRELEASED; urgency=low
     + Request the raw log file when downloading.
   * debcheckout: Use the destination directory, not package name, when
     checking for where the checkout happened.  (Closes: #627030)
+  * Merge from Ubuntu:
+    + dscverify: Use Ubuntu keyrings if on an Ubuntu-based system.
 
  -- James Vega <jamessan@debian.org>  Sat, 14 May 2011 16:05:10 -0400
 
